feat(matcher): 重构积木式匹配规则引擎并支持多态实体绑定
1. 核心引擎重构 (Backend)
   - 重构 `TransactionMatcher` 实体，引入基于 JSON 的 AST (`conditionNode`, `actionNode`) 以支持复杂的 AND/OR 条件组合及多动作执行。
   - 引入 `stopOnMatch` 字段，实现多规则并发时的冲突解决与优先级阻断机制。
   - 废弃零散的实体外键 (`counterpartyId`, `categoryId`, `accountId`)，统一替换为 `targetType` 和 `targetId`，实现高扩展性的多态规则绑定机制。
   - 修复 `MatcherController` 缺少 `@PutMapping` 导致规则保存和绑定时报 405 Method Not Allowed 的问题。
   - 完善 `MatcherService` 的动态条件解析逻辑，并新增了对应的分支覆盖单元测试。

2. 前端界面与组件交互升级 (Frontend)
   - 新增 `RuleBuilder` 组件，提供图形化、搭积木式的规则条件与执行动作配置界面。
   - 新增 `TransactionSelector` 流水选择组件，在规则编辑页打通实时的“沙盒测试”功能。
   - 新增 `RuleSelector` 规则多选绑定组件，并修复了弹窗超大、滚动条错乱的样式问题。
   - 在交易对手 (Counterparties)、分类 (Categories)、账户 (Accounts) 页面全面集成 `RuleSelector`，打通多态规则的快捷绑定流程。
   - 优化 `Matchers` 规则管理列表，按规则类型分组展示，并直观区分“全局通用规则”与“专属规则”。